--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "date-fns": "^3.3.1",
+    "gh-pages": "^6.1.1",
+    "html-react-parser": "^5.1.8",
+    "html-to-text": "^9.0.5",
+    "microcms-js-sdk": "^2.7.0",
+    "next": "14.0.4",
+    "placeholder": "^1.0.2",
+    "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "sharp": "^0.33.2"
   },
   "devDependencies": {
     "eslint": "^8",
